various adjustment, renamings, and bumped serializer library for native records support